# egingerZactivity

./: .gitignore  Dockerfile  README.md  docker-compose-local.yaml  docker-compose-remote.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
api/: db.py  main.py  migrate_db.py
api/cruds/: task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
api/static/css/: style.css  style.css.map  style.scss
api/templates/: index.html
tests/: test_main.py
web/conf.d/: app.conf
